--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
@@ -42,7 +45,6 @@
     "stylelint": "^15.7.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-order": "^6.0.3",
-    "ts-loader": "^9.4.3",
     "typescript": "^5.0.4",
     "typescript-plugin-css-modules": "^5.0.1",
     "url-loader": "^4.1.1",
@@ -62,10 +64,13 @@
     "commit": "yarn test && cz"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-hook-form": "^7.45.1",
+    "react-router-dom": "^6.14.1",
+    "styled-components": "^6.0.1"
   },
   "lint-staged": {
     "*.{css,scss}": "yarn stylelint:fix",
