--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commit": "yarn test && cz"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -24,7 +25,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.1"
+    "styled-components": "^6.0.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
