--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hello-23-08",
+  "name": "react-dog-food",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -15,6 +15,7 @@
     "fix": "yarn lint && yarn format",
     "test": "jest --coverage --watchAll --config=configs/jest.json",
     "test:e2e": "./scripts/run-e2e.sh",
+    "test:ci": "jest --watchAll=false --ci --reporters=default --reporters='jest-junit'",
     "test:watch": "jest --config=\"./jest/jest.config.ts\" --watch",
     "cy:run:headed": "cypress run --headed --config-file=\"./cypress/cypress.config.ts\"",
     "cy:run": "cypress run --config-file=\"./cypress/cypress.config.ts\"",
@@ -68,6 +69,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "jest-fetch-mock": "^3.0.3",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^13.2.2",
     "merge": "^2.1.1",
     "mini-css-extract-plugin": "^2.7.6",
